--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,14 @@ body {
     margin: 0;
 }
 
+.outer{
+    text-align: center;
+}
+
 .map {
     padding: 10px;
     margin: 0;
+    display: inline-block;
 }
 
 .map__res {
@@ -24,12 +29,15 @@ body {
 
 .map__cell {
     display: inline-block;
-    width: 10px;
-    height: 10px;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
     padding: 0;
-    margin-right: 1px;
-    margin-bottom: 1px;
     border: 1px solid #eee;
+}
+
+.map__cell:not(:last-of-type){
+    margin-right: 10px;
 }
 
 .map__cell_water {
@@ -38,4 +46,46 @@ body {
 
 .map__cell_island {
     background-color: #fad946;
+}
+
+.map__cell_island.map__cell_selected{
+    animation: pulse 1s ease-in-out;
+}
+
+.map__cell_selected{
+    box-shadow: inset 0 0 20px 0 #da002b;
+}
+
+.map__row_selected{
+    position: relative;
+    zoom: 1.2;
+}
+
+.map__row_selected::before{
+    content: "\005B";
+    color: #da002b;
+    font-size: 66px;
+    position: absolute;
+    top: -18px;
+    left: -13px;
+    height: 100%;
+}
+
+.map__row_selected::after{
+    content: "\005D";
+    color: #da002b;
+    font-size: 66px;
+    position: absolute;
+    top: -18px;
+    right: -13px;
+    height: 100%;
+}
+
+@keyframes pulse {
+    from, to{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.5);
+    }
 }
