--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body {
 }
 
 .map__cell_island.map__cell_selected{
-    animation: pulse 1s ease-in-out;
+    animation: scale 1s ease-in-out;
 }
 
 .map__cell_selected{
@@ -81,8 +81,44 @@ body {
     right: -13px;
     height: 100%;
 }
+.map__counter{
+    position: relative;
+}
+.map__counter-add{
+    color: #da002b;
+    width: 10px;
+    margin: 0 auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+}
 
-@keyframes pulse {
+.map__counter-add_active{
+    animation: fadeOut 1s ease-in-out;
+}
+
+@keyframes fadeOut {
+    from{
+        opacity: 0;
+        transform: scale(1);
+    }
+
+    50%{
+        opacity: 1;
+        transform: scale(1.5);
+    }
+
+    to {
+        top: 100%;
+        opacity: 0;
+        transform: scale(1);
+    }
+
+}
+
+@keyframes scale {
     from, to{
         transform: scale(1);
     }
